--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -208,3 +208,9 @@ footer p {
     color: #333;
     transition: color 0.3s ease-in-out;
 }
+
+.new-amsterdam-regular {
+    font-family: "New Amsterdam", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
